fix: Form control control when focus on dark mode

--- a/frappe/public/scss/desk/dark.scss
+++ b/frappe/public/scss/desk/dark.scss
@@ -134,9 +134,9 @@
 		--charts-legend-label: var(--charts-label-color);
 	}
 
-	.form-control:focus {
-		color: white;
-	}
+	// .form-control:focus {
+	// 	color: white;
+	// }
 
 	// find better fix
 	.heatmap-chart {
